--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,6 +83,7 @@ img {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 2;
 
     background-color: var(--background-color);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -188,7 +189,7 @@ img {
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 192px;
+    padding-top: 264px; 
     padding-bottom: 192px;
 }
 /* Overlay */
@@ -410,7 +411,7 @@ img {
 
 /* Portfolio  page styles */
 .section.portfolio-section {
-    padding-top: 96px;
+    padding-top: 168px;
 }
 .radiobutton-set {
     outline: 0.2px var(--outline-style) teal;
@@ -445,7 +446,7 @@ img {
 .portfolio-btn:focus {
     color: var(--inverter-color);
     background-color:var(--primary-brand-color);
-    border: none;
+    border: 1px solid var(--primary-brand-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-btn:active {
